Adding a Grease Pencil monkey shows "Add Grease Pencil (legacy)" #114453

Closed
opened 2023-11-03 12:40:59 +01:00 by Dalai Felinto · 0 comments

Blender Version
Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-11-02 17:36, hash: 937b12e9830a
Worked: -

Short description of error
Adding a Grease Pencil monkey shows "Add Grease Pencil (legacy)". This should only use this name if the experimental Grease Pencil 3 is enabled.

Exact steps for others to reproduce the error

  • Add a new Grease Pencil Monkey (Shift A + Grease Pencil + Monkey).

image

**Blender Version** Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-11-02 17:36, hash: `937b12e9830a` Worked: - **Short description of error** Adding a Grease Pencil monkey shows "Add Grease Pencil (legacy)". This should only use this name if the experimental Grease Pencil 3 is enabled. **Exact steps for others to reproduce the error** * Add a new Grease Pencil Monkey (Shift A + Grease Pencil + Monkey). ![image](/attachments/641918c7-11f5-4327-a294-88196327efa9)
Dalai Felinto added the
Type
Bug
Module
Grease Pencil
Priority
High
Status
Confirmed
labels 2023-11-03 12:41:00 +01:00
Dalai Felinto added this to the Grease Pencil project 2023-11-03 12:41:01 +01:00
Falk David was assigned by Dalai Felinto 2023-11-03 12:41:11 +01:00
Hans Goudey added this to the 4.0 milestone 2023-11-04 10:55:53 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-08 14:59:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114453
No description provided.